Changed deck cards to a LinkedList to improve performance on removals.